# sat

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.md
data/mk1/: geometry.txt  lock_sheet.txt
data/mk2/: geometry.txt  lock_sheet.txt
data/sudoku/: 5_hard_sudokus.txt
example_data/mk2/: geometry.txt  lock_sheet.txt
example_data/mk3/: geometry.txt
src/: adjaceny_list.rs  festival_scheduler.rs  fixed_size_stack.rs  main.rs  master_key.rs  master_key_2.rs  master_key_ms.rs  slot_map.rs  solver.rs  sudoku.rs  sudoku_2.rs
