[package]
name = "sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }

minisat = "0.4.4"


[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true
